--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
+plugins {
+    id 'com.apollographql.apollo' version '2.2.0'
+}
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+
 
 android {
     compileSdkVersion 29
@@ -44,6 +48,9 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'com.apollographql.apollo:apollo-runtime:2.2.0'
+    implementation 'com.apollographql.apollo:apollo-coroutines-support:2.2.0'
+
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -54,4 +61,8 @@ dependencies {
 }
 repositories {
     mavenCentral()
+}
+
+apollo {
+    generateKotlinModels.set(true)
 }
