--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     buildFeatures {
         viewBinding true
     }
@@ -47,6 +51,9 @@ dependencies {
 
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation("io.coil-kt:coil:0.11.0")
+    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
 
     implementation 'com.apollographql.apollo:apollo-runtime:2.2.0'
     implementation 'com.apollographql.apollo:apollo-coroutines-support:2.2.0'
